--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="bar" style="margin-bottom: -40px;"></div>
                     <div class="project-container">
                         <div class="project-content project-1">
-                            <div class="slider-wrapper">
+                            <div class="slider-wrapper right">
                                 <div class="slider">
                                     <img id="slide-1" src="./styles/images/PROJETO 01/Maira_Living_05.jpg" alt="">
                                     <img id="slide-2" src="./styles/images/PROJETO 01/Maira_Living_08.png" alt="">
@@ -160,7 +160,7 @@
                     <hr>
                     <div class="project-container">
                         <div class="project-content project-3">
-                            <div class="slider-wrapper">
+                            <div class="slider-wrapper right">
                                 <div class="slider">
                                     <img id="slide-11"
                                         src="./styles/images/PROJETO 03/AmiltonPatricia_Living_Render02.png" alt="">
