--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="project-desciption">
+                        <div class="project-desciption bottom">
                             <h2>INTEGRADA, ATEMPORAL E VISTA PARA O MAR</h2>
                             <p>Localizada na Ilha do Governador, no Rio de Janeiro, o Apto Rio foi pensada
                                 afim de criar
@@ -201,7 +201,7 @@
                     </div>
                     <hr>
                     <div class="project-container">
-                        <div class="project-desciption description-mobile">
+                        <div class="project-desciption description-mobile bottom">
                             <h2>GOURMET, MODERNO E SPA</h2>
                             <p>A reforma desse espaço de lazer, que fica localizado em terras mineiras foi
                                 pensada em
