--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         </div>
                     </div>
                     <hr>
-                    <div class="project-container">
+                    <div class="project-container project-3-container">
                         <div class="project-content project-3">
                             <div class="slider-wrapper right">
                                 <div class="slider">
