--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             </div>
                         </div>
                     </div>
-                    <hr>
+                    <hr class="project-3-bar">
                     <div class="project-container project-3-container">
                         <div class="project-content project-3">
                             <div class="slider-wrapper right">
@@ -179,7 +179,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="project-desciption">
+                        <div class="project-desciption mobile">
                             <h2>NATUREZA, FUNCIONALIDADE E HARMONIOSO</h2>
                             <p>Localizado em um condomínio em Brasília, esse apartamento apresenta um living
                                 que conta
