--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                         <div class="project-content project-1">
                             <div class="slider-wrapper right">
                                 <div class="slider">
-                                    <img id="slide-1" src="./styles/images/PROJETO 01/Maira_Living_05.jpg" alt="">
-                                    <img id="slide-2" src="./styles/images/PROJETO 01/Maira_Living_08.png" alt="">
-                                    <img id="slide-3" src="./styles/images/PROJETO 01/Maira_Living_07.jpg" alt="">
-                                    <img id="slide-4" src="./styles/images/PROJETO 01/Maira_Living_10.jpg" alt="">
+                                    <img id="slide-1" class="slide-img" src="./styles/images/PROJETO 01/Maira_Living_05.jpg" alt="">
+                                    <img id="slide-2" class="slide-img" src="./styles/images/PROJETO 01/Maira_Living_08.png" alt="">
+                                    <img id="slide-3" class="slide-img" src="./styles/images/PROJETO 01/Maira_Living_07.jpg" alt="">
+                                    <img id="slide-4" class="slide-img" src="./styles/images/PROJETO 01/Maira_Living_10.jpg" alt="">
                                 </div>
                                 <div class="slider-nav">
                                     <a href="#slide-1"></a>
@@ -134,17 +134,17 @@
                         <div class="project-content project-2">
                             <div class="slider-wrapper slider-mobile">
                                 <div class="slider">
-                                    <img id="slide-5" src="./styles/images/PROJETO 02/Augusto_SalaCozinha_05.png"
+                                    <img id="slide-5" class="slide-img" src="./styles/images/PROJETO 02/Augusto_SalaCozinha_05.png"
                                         alt="">
-                                    <img id="slide-6" src="./styles/images/PROJETO 02/Augusto_SalaCozinha_04.png"
+                                    <img id="slide-6" class="slide-img" src="./styles/images/PROJETO 02/Augusto_SalaCozinha_04.png"
                                         alt="">
-                                    <img id="slide-7" src="./styles/images/PROJETO 02/Augusto_SalaCozinha_01.png"
+                                    <img id="slide-7" class="slide-img" src="./styles/images/PROJETO 02/Augusto_SalaCozinha_01.png"
                                         alt="">
-                                    <img id="slide-8" src="./styles/images/PROJETO 02/Augusto_QuartoSuite_03.png"
+                                    <img id="slide-8" class="slide-img" src="./styles/images/PROJETO 02/Augusto_QuartoSuite_03.png"
                                         alt="">
-                                    <img id="slide-9" src="./styles/images/PROJETO 02/Augusto_QuartoFilhos_04.png"
+                                    <img id="slide-9" class="slide-img" src="./styles/images/PROJETO 02/Augusto_QuartoFilhos_04.png"
                                         alt="">
-                                    <img id="slide-10" src="./styles/images/PROJETO 02/home 02.png" alt="">
+                                    <img id="slide-10" class="slide-img" src="./styles/images/PROJETO 02/home 02.png" alt="">
                                 </div>
                                 <div class="slider-nav">
                                     <a href="#slide-5"></a>
@@ -162,13 +162,13 @@
                         <div class="project-content project-3">
                             <div class="slider-wrapper right">
                                 <div class="slider">
-                                    <img id="slide-11"
+                                    <img id="slide-11" class="slide-img"
                                         src="./styles/images/PROJETO 03/AmiltonPatricia_Living_Render02.png" alt="">
-                                    <img id="slide-12"
+                                    <img id="slide-12" class="slide-img"
                                         src="./styles/images/PROJETO 03/AmiltonPatricia_Living_Render04.png" alt="">
-                                    <img id="slide-13"
+                                    <img id="slide-13" class="slide-img"
                                         src="./styles/images/PROJETO 03/AmiltonPatricia_Living_Render06.png" alt="">
-                                    <img id="slide-14"
+                                    <img id="slide-14" class="slide-img"
                                         src="./styles/images/PROJETO 03/AmiltonPatricia_Living_Render07.png" alt="">
                                 </div>
                                 <div class="slider-nav">
@@ -223,10 +223,10 @@
                         <div class="project-content project-4">
                             <div class="slider-wrapper slider-mobile">
                                 <div class="slider">
-                                    <img id="slide-15" src="./styles/images/PROJETO 04/Janaina_Gourmet_10.jpg" alt="">
-                                    <img id="slide-16" src="./styles/images/PROJETO 04/Janaina_Gourmet_06.jpg" alt="">
-                                    <img id="slide-17" src="./styles/images/PROJETO 04/Janaina_Gourmet_04.jpg" alt="">
-                                    <img id="slide-18" src="./styles/images/PROJETO 04/Janaina_Gourmet_02.jpg" alt="">
+                                    <img id="slide-15" class="slide-img" src="./styles/images/PROJETO 04/Janaina_Gourmet_10.jpg" alt="">
+                                    <img id="slide-16" class="slide-img" src="./styles/images/PROJETO 04/Janaina_Gourmet_06.jpg" alt="">
+                                    <img id="slide-17" class="slide-img" src="./styles/images/PROJETO 04/Janaina_Gourmet_04.jpg" alt="">
+                                    <img id="slide-18" class="slide-img" src="./styles/images/PROJETO 04/Janaina_Gourmet_02.jpg" alt="">
                                 </div>
                                 <div class="slider-nav">
                                     <a href="#slide-15"></a>
