--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="project-desciption">
+                        <div class="project-desciption mobile-descpt">
                             <h2>INTEGRADA, ATEMPORAL E VISTA PARA O MAR</h2>
                             <p>Localizada na Ilha do Governador, no Rio de Janeiro, o Apto Rio foi pensada
                                 afim de criar
