--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="project-desciption mobile mobile-descpt">
+                        <div class="project-desciption  mobile-descpt">
                             <h2>NATUREZA, FUNCIONALIDADE E HARMONIOSO</h2>
                             <p>Localizado em um condomínio em Brasília, esse apartamento apresenta um living
                                 que conta
