--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                         alt="">
                                     <img id="slide-10" class="slide-img" src="./styles/images/PROJETO 02/home 02.png" alt="">
                                 </div>
-                                <div class="slider-nav">
+                                <div class="slider-nav third">
                                     <a href="#slide-5"></a>
                                     <a href="#slide-6"></a>
                                     <a href="#slide-7"></a>
