--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                             </p>
                         </div>
                     </div>
-                    <hr>
-                    <div class="project-container">
+                    <hr class="project-3-bar">>
+                    <div class="project-container project-3-container">
                         <div class="project-desciption description-mobile">
                             <h2>GOURMET, MODERNO E SPA</h2>
                             <p>A reforma desse espaço de lazer, que fica localizado em terras mineiras foi
