--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                             </p>
                         </div>
                     </div>
-                    <hr class="project-3-bar">>
-                    <div class="project-container project-3-container">
+                    <hr class="project-4-bar">>
+                    <div class="project-container project-4-container">
                         <div class="project-desciption description-mobile">
                             <h2>GOURMET, MODERNO E SPA</h2>
                             <p>A reforma desse espaço de lazer, que fica localizado em terras mineiras foi
@@ -239,7 +239,7 @@
                     </div>
 
                 </div>
-                <div>
+                <div class="map">
                     <div class="map-header">
                         <div class="content-title">Projetos ao redor do mundo</div>
                         <div class="bar"></div>
