--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                                     class="fa-brands fa-instagram fa-2x"></i></a>
                             <a href="mailto:vitorsilva_arquiteto@hotmail.com"><i
                                     class="fa-solid fa-envelope fa-2x"></i></a>
-                            <a href="https://br.pinterest.com/vitorsilvaarquiteto/"><i
+                            <a href="https://pin.it/52MohjD"><i
                                     class="fa-brands fa-pinterest fa-2x"></i></a>
                         </div>
                     </div>
