--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                             </p>
                         </div>
                     </div>
-                    <hr class="project-4-bar">>
+                    <hr class="project-4-bar">
                     <div class="project-container project-4-container">
                         <div class="project-desciption description-mobile">
                             <h2>GOURMET, MODERNO E SPA</h2>
